Updating configuration for Dev and Prod environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,23 +8,45 @@ services:
       - /usr/src/app/node_modules
     environment:
       REDIS_HOST: ${REDIS_HOST}
-      NODE_ENV: ${NODE_ENV}
-      ENVIRONMENT: ${ENVIRONMENT}
-      NODE_SERVER_IP: ${NODE_SERVER_IP}
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+      REDIS_USER: ${REDIS_USER}
       REDIS_PORT: ${REDIS_PORT}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_HOST1: ${MYSQL_HOST1}
-      MYSQL_HOST2: ${MYSQL_HOST2}
-      MYSQL_HOST3: ${MYSQL_HOST3}
-      MYSQL_HOST4: ${MYSQL_HOST4}
-      JWT_SECRET: ${JWT_SECRET}
-      NODE_SERVER_HOST: ${NODE_SERVER_HOST}
-      NODE_SERVER_PORT: ${NODE_SERVER_PORT}
+
+      MYSQL_HOST_1: ${MYSQL_HOST_1}
+      MYSQL_PORT_1: ${MYSQL_PORT_1}
+      MYSQL_DATABASE_1: ${MYSQL_DATABASE_1}
+      MYSQL_USER_1: ${MYSQL_USER_1}
+      MYSQL_PASSWORD_1: ${MYSQL_PASSWORD_1}
+
+      MYSQL_HOST_2: ${MYSQL_HOST_2}
+      MYSQL_PORT_2: ${MYSQL_PORT_2}
+      MYSQL_DATABASE_2: ${MYSQL_DATABASE_2}
+      MYSQL_USER_2: ${MYSQL_USER_2}
+      MYSQL_PASSWORD_2: ${MYSQL_PASSWORD_2}
+
+      MYSQL_HOST_3: ${MYSQL_HOST_3}
+      MYSQL_PORT_3: ${MYSQL_PORT_3}
+      MYSQL_DATABASE_3: ${MYSQL_DATABASE_3}
+      MYSQL_USER_3: ${MYSQL_USER_3}
+      MYSQL_PASSWORD_3: ${MYSQL_PASSWORD_3}
+
+      MYSQL_HOST_4: ${MYSQL_HOST_4}
+      MYSQL_PORT_4: ${MYSQL_PORT_4}
+      MYSQL_DATABASE_4: ${MYSQL_DATABASE_4}
+      MYSQL_USER_4: ${MYSQL_USER_4}
+      MYSQL_PASSWORD_4: ${MYSQL_PASSWORD_4}
+
+      REACT_APP_NODE_SERVER_HOST: ${REACT_APP_NODE_SERVER_HOST}
+      REACT_APP_NODE_SERVER_PORT: ${REACT_APP_NODE_SERVER_PORT}
       REACT_SERVER_HOST: ${REACT_SERVER_HOST}
       REACT_SERVER_PORT: ${REACT_SERVER_PORT}
+
+      NODE_SERVER_HOST: ${NODE_SERVER_HOST}
+      NODE_SERVER_PORT: ${NODE_SERVER_PORT}
+      NODE_SERVER_IP: ${NODE_SERVER_IP}
+
+      JWT_SECRET: ${JWT_SECRET}
+
     ports:
         - ${NODE_SERVER_PORT}:${NODE_SERVER_PORT}
     depends_on:
@@ -55,42 +77,38 @@ services:
   mysqldb1:
     image: mysql:5.7.29
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_PORT: ${MYSQL_PORT}
-      MYSQL_HOST: ${MYSQL_HOST1}
+      MYSQL_DATABASE: ${MYSQL_DATABASE_1}
+      MYSQL_USER: ${MYSQL_USER_1}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD_1}
+      MYSQL_PORT: ${MYSQL_PORT_1}
+      MYSQL_HOST: ${MYSQL_HOST_1}
 
   mysqldb2:
     image: mysql:5.7.29
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_PORT: ${MYSQL_PORT}
-      MYSQL_HOST: ${MYSQL_HOST2}
+      MYSQL_DATABASE: ${MYSQL_DATABASE_2}
+      MYSQL_USER: ${MYSQL_USER_2}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD_2}
+      MYSQL_PORT: ${MYSQL_PORT_2}
+      MYSQL_HOST: ${MYSQL_HOST_2}
 
   mysqldb3:
     image: mysql:5.7.29
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_PORT: ${MYSQL_PORT}
-      MYSQL_HOST: ${MYSQL_HOST3}
+      MYSQL_DATABASE: ${MYSQL_DATABASE_3}
+      MYSQL_USER: ${MYSQL_USER_3}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD_3}
+      MYSQL_PORT: ${MYSQL_PORT_3}
+      MYSQL_HOST: ${MYSQL_HOST_3}
 
   mysqldb4:
     image: mysql:5.7.29
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_PORT: ${MYSQL_PORT}
-      MYSQL_HOST: ${MYSQL_HOST4}
+      MYSQL_DATABASE: ${MYSQL_DATABASE_4}
+      MYSQL_USER: ${MYSQL_USER_4}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD_4}
+      MYSQL_PORT: ${MYSQL_PORT_4}
+      MYSQL_HOST: ${MYSQL_HOST_4}
 
   redis:
     image: redis:alpine
