--- a/sample.env
+++ b/sample.env
@@ -1,26 +1,49 @@
+NODE_ENV=dev
+
+# Redis
 REDIS_HOST=redis
-NODE_ENV=production
-ENVIRONMENT=dev
-NODE_SERVER_HOST=rce
-NODE_SERVER_PORT=5032
-NODE_SERVER_IP=0.0.0.0
+REDIS_PASSWORD=password
+REDIS_USER=default
 REDIS_PORT=6379
-MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=my-database
-MYSQL_USER=user
-MYSQL_PASSWORD=password
-MYSQL_PORT=3306
-MYSQL_HOST1=mysqldb1
-MYSQL_PORT1=3306
-MYSQL_HOST2=mysqldb2
-MYSQL_PORT2=3307
-MYSQL_HOST3=mysqldb3
-MYSQL_PORT3=3308
-MYSQL_HOST4=mysqldb4
-MYSQL_PORT4=3309
-JWT_SECRET=oiuy3487saifuy3486iukhvs87645lkah834276
-CLIENT_PORT=3000
+
+# MYSQL
+MYSQL_HOST_1=mysqldb1
+MYSQL_PORT_1=3306
+MYSQL_DATABASE_1=my-database
+MYSQL_USER_1=user
+MYSQL_PASSWORD_1=password
+
+MYSQL_HOST_2=mysqldb2
+MYSQL_PORT_2=3307
+MYSQL_DATABASE_2=my-database
+MYSQL_USER_2=user
+MYSQL_PASSWORD_2=password
+
+
+MYSQL_HOST_3=mysqldb3
+MYSQL_PORT_3=3308
+MYSQL_DATABASE_3=my-database
+MYSQL_USER_3=user
+MYSQL_PASSWORD_3=password
+
+
+MYSQL_HOST_4=mysqldb4
+MYSQL_PORT_4=3309
+MYSQL_DATABASE_4=my-database
+MYSQL_USER_4=user
+MYSQL_PASSWORD_4=password
+
+
+# React App
 REACT_APP_NODE_SERVER_HOST=localhost
 REACT_APP_NODE_SERVER_PORT=5032
 REACT_SERVER_HOST=localhost
 REACT_SERVER_PORT=3000
+
+# Node App
+NODE_SERVER_HOST=rce
+NODE_SERVER_PORT=5032
+NODE_SERVER_IP=0.0.0.0
+
+# JWT
+JWT_SECRET=oiuy3487saifuy3486iukhvs87645lkah834276
