--- a/sample.env
+++ b/sample.env
@@ -35,9 +35,9 @@ MYSQL_PASSWORD_4=password
 
 
 # React App
-REACT_APP_NODE_SERVER_HOST=localhost
+REACT_APP_NODE_SERVER_HOST=http://localhost:5032
 REACT_APP_NODE_SERVER_PORT=5032
-REACT_SERVER_HOST=localhost
+REACT_SERVER_HOST=http://localhost:3000
 REACT_SERVER_PORT=3000
 
 # Node App
@@ -47,3 +47,6 @@ NODE_SERVER_IP=0.0.0.0
 
 # JWT
 JWT_SECRET=oiuy3487saifuy3486iukhvs87645lkah834276
+
+# Connection
+CONNECTION_EXPIRATION=60000
