Changing Backend to railway and minor code improvement

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,8 @@ services:
       NODE_SERVER_IP: ${NODE_SERVER_IP}
 
       JWT_SECRET: ${JWT_SECRET}
+      CRON_RUN_EVERY: ${CRON_RUN_EVERY}
+      CONNECTION_EXPIRATION: ${CONNECTION_EXPIRATION}
 
     ports:
         - ${NODE_SERVER_PORT}:${NODE_SERVER_PORT}
