Sample.env update and updating logs statements

--- a/sample.env
+++ b/sample.env
@@ -9,29 +9,33 @@ REDIS_PORT=6379
 # MYSQL
 MYSQL_HOST_1=mysqldb1
 MYSQL_PORT_1=3306
-MYSQL_DATABASE_1=my-database
+MYSQL_DATABASE_1=mydb
 MYSQL_USER_1=user
 MYSQL_PASSWORD_1=password
+MYSQL_ROOT_PASSWORD=password
 
 MYSQL_HOST_2=mysqldb2
-MYSQL_PORT_2=3307
-MYSQL_DATABASE_2=my-database
+MYSQL_PORT_2=3306
+MYSQL_DATABASE_2=mydb
 MYSQL_USER_2=user
 MYSQL_PASSWORD_2=password
+MYSQL_ROOT_PASSWORD=password
 
 
 MYSQL_HOST_3=mysqldb3
-MYSQL_PORT_3=3308
-MYSQL_DATABASE_3=my-database
+MYSQL_PORT_3=3306
+MYSQL_DATABASE_3=mydb
 MYSQL_USER_3=user
 MYSQL_PASSWORD_3=password
+MYSQL_ROOT_PASSWORD=password
 
 
 MYSQL_HOST_4=mysqldb4
-MYSQL_PORT_4=3309
-MYSQL_DATABASE_4=my-database
+MYSQL_PORT_4=3306
+MYSQL_DATABASE_4=mydb
 MYSQL_USER_4=user
 MYSQL_PASSWORD_4=password
+MYSQL_ROOT_PASSWORD=password
 
 
 # React App
@@ -49,4 +53,5 @@ NODE_SERVER_IP=0.0.0.0
 JWT_SECRET=oiuy3487saifuy3486iukhvs87645lkah834276
 
 # Connection
-CONNECTION_EXPIRATION=60000
+CONNECTION_EXPIRATION=120000
+CRON_RUN_EVERY=1
